--- a/lib/html/index.html
+++ b/lib/html/index.html
@@ -7,12 +7,12 @@
     <meta name="Description" content="Zookin Web Service (ZWS) - https://github.com/bufutda/zookin"/>
     <script src="resources/lib/jquery-1.7.2.min.js"></script>
     <script src="resources/lib/jquery.mousewheel-min.js"></script>
-    <script src="resources/lib/jquery.terminal.min.js"></script>
+    <script src="resources/lib/jquery.terminal.js"></script>
     <script src="resources/lib/unix_formatting.js"></script>
     <link href="resources/lib/jquery.terminal.min.css" rel="stylesheet"/>
     <script>
     jQuery(document).ready(function($) {
-        $('body').terminal("http://watz.local:8070", {
+        $('body').terminal("https://zookin.zooengg.ca:8069", {
             login: true,
             onInit: function (terminal) {
                 window.terminal = terminal;
@@ -24,7 +24,7 @@
             },
             onBeforeLogout: function (terminal) {
                 var p = [terminal.token()];
-                $.jrpc("http://watz.local:8070", "logout", p, function (rep, suc) {
+                $.jrpc("https://zookin.zooengg.ca:8069", "logout", p, function (rep, suc) {
                     terminal.clear();
                 });
                 return true;
